--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 # A new Flutter project.
-name: layout_masiqbal_1
+name: electroease
 description: "A new Flutter project."
 publish_to: 'none'
 version: 1.0.0+1
@@ -11,6 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  lottie: ^3.1.2 
 
 dev_dependencies:
   flutter_test:
@@ -21,22 +23,13 @@ dev_dependencies:
 flutter:
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-
-  # To add custom fonts to your application, add a fonts section here.
-  # FIXED: Added the required 'fonts:' key and corrected indentation.
-
   assets:
-  - assets/images/ # FIXED: Menggunakan kunci 'assets:' dan path langsung
-  - assets/images/gojek.png
+    - assets/images/
+    - assets/fonts/
+    - assets/lottie/
 
-  # ...
-  fonts:
-    - family: Poppins
-      fonts:
-        - asset: assets/fonts/Poppins-Regular.ttf   # SEPERTI INI
-        - asset: assets/fonts/Poppins-Bold.ttf    # SEPERTI INI
-# ...
+fonts:
+  - family: Poppins
+    fonts:
+      - asset: assets/fonts/Poppins-Regular.ttf
+      - asset: assets/fonts/Poppins-Bold.ttf
